--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         thead td{
             border-bottom: 1px solid;
         }
+        tbody tr td{
+            border-bottom: 1px solid;
+            padding: 10px 0;
+        }
     </style>
 </head>
 <body>
@@ -28,9 +32,18 @@
             <td>Link</td>
         </thead>
         <tbody>
-            <tr >
+            <tr>
                 <td>1</td>
                 <td><a href="./Day1/BTVN/bt1.html">Bài tập 1</a></td>
+            </tr>
+            <tr >
+                <td>2</td>
+                <td>
+                    <a href="./Day2/BTVN/BT01/BT01.html">Bài tập 1</a><br/>
+                    <a href="./Day2/BTVN/BT02/BT02.html">Bài tập 2</a><br/>
+                    <a href="./Day2/BTVN/BT03/BT03.html">Bài tập 3</a><br/>
+                    <a href="./Day2/BTVN/BT04/BT04.html">Bài tập 4</a><br/>
+                </td>
             </tr>
         </tbody>
     </table>
